Refactor ZIP file extraction logic in PIDClient to handle directory entries more efficiently